# MLOps-in-a-Box

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  notes.md  pyproject.toml
configs/: digital_data_etl_beege.yaml  end_to_end_data.yaml  evaluating.yaml  export_artifact_to_json.yaml  feature_engineering.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  training.yaml  training_local.yaml
llm_engineering/: settings.py
llm_engineering/application/crawlers/: base.py  medium.py
llm_engineering/domain/base/: vector.py
llm_engineering/infrastructure/db/: qdrant.py
llm_engineering/model/finetuning/: finetune.py
pipelines/: __init__.py  training_local.py
scripts/: tf.sh
steps/etl/: crawl_links.py
steps/feature_engineering/: load_to_vector_db.py
steps/generate_datasets/: query_feature_store.py
steps/training/: __init__.py  local.py
terraform/: .terraform.lock.hcl  main.tf  stacks.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tools/: run.py
